add cache implemetation and helpful method added new load method implementation